    - Renamed mineral water pumpjack prototype (All of your mineral pumpjacks will be deleted when updating)
    - Updated locale
  Bugfixes:
    - Fixed some technology requirements for AAI Containers
    - Fixed some technology icons
    - Fixed tungsten plate and tungsten steel smelting recipe chains
  Balancing:
    - Belt immunity equipment is now unlocked earlier
    - Rebalanced crystallizer
---------------------------------------------------------------------------------------------------
Version: 0.3.16
Date: 2025-05-23
  Changes:
    - Updated ja locale thanks to snow note
    - Increased stack size of stack inserters
    - Agricultural tower does not require compressor to be built
    - Reduced crafting speed of alloy forge
    - Removed basic smelting, intermadiate smelting, melting and casting recipes from alloy forge
    - Reduced number of spores from algae
    - Liquids in barrels are shown now in fluids group
  Bugfixes:
    - Fixed zinc casting recipes produced more zinc oxide and zinc sulfate than they produce
    - Fixed indium casting recipes produced more indium sulfate than they produce
    - Fixed molten recipes from crushed iron ore and crushed copper ore
    - Fixed name from train boige to train bogie (you will have to select again the recipe of the assembling machine)
    - Fixed that fast inserter could carry higher stack size than bulk inserter
    - Fixed chromium cobalt recipe
    - Fixed biusart lab graphics (before it was low res)
    - Fixed changelog visibility in game
    - Fixed order of icons of first tier of science packs in lab reflectig better the order of progression
    - Fixed that science packs on labs could be covered by modules in alt mode
    - Fixed technology requirements for bio pesticide
    - Fixed material science pack 2 not being required as input cost fore some sciences that came after it
    - Fixed ingredients for lithium processing tech
    - Fixed ingredients for logistics 3 tech